--- a/eme-observer/eoml.html
+++ b/eme-observer/eoml.html
@@ -3639,8 +3639,9 @@
                                                     <div style="height:8px"></div>
                                                     <strong>Common Moon Windows</strong><br>
                                                     ${windowsHTML}
-                                                    <div style="height:8px"></div>
-                                                    (-1) and (+1) denote previous and next UTC day, respectively
+                                                    <div style="font-size:11px; color:#666; font-style:italic;">
+                                                      (-1) and (+1) indicate the previous and next UTC day, respectively.
+                                                    </div>
                                                 `;
 
                                                 dxMarker.bindPopup(popupContent);
