--- a/eme-observer/eoml.html
+++ b/eme-observer/eoml.html
@@ -1007,6 +1007,34 @@
                 <div id="relativeChartLabel"></div>
                 <canvas id="relativeDataChart"></canvas>
             </div>
+            <a href="https://dxer.site/map" target="_blank" title="Go to map"
+               style="
+                 display: inline-flex;
+                 align-items: center;
+                 justify-content: center;
+                 width: 32px;
+                 height: 32px;
+                 background: rgba(255,255,255,0.1);
+                 color: white;
+                 border-radius: 6px;
+                 text-decoration: none;
+                 transition: background 0.2s ease;
+               "
+               onmouseover="this.style.background='rgba(255,255,255,0.25)'"
+               onmouseout="this.style.background='rgba(255,255,255,0.1)'">
+              <!-- small dome icon -->
+              <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none" aria-hidden="true">
+                <!-- dome base (filled) -->
+                <path d="M2 15a10 10 0 0 1 20 0v3H2v-3z" fill="white"/>
+                <!-- contour/grid lines -->
+                <g stroke="rgba(0,0,0,0.25)" stroke-width="0.9" fill="none" stroke-linecap="round">
+                  <path d="M3.5 15c2.2-3.2 6.4-4.8 9.5-4.8s7.3 1.6 9.5 4.8"/>
+                  <path d="M4.7 17c2-1.7 5.1-2.6 7.8-2.6s5.8.9 7.8 2.6"/>
+                  <path d="M12 8.5c2.2.0 4.0 1.8 4 1.8s-1.8 1.8-4 1.8-4-1.8-4-1.8 1.8-1.8 4-1.8z" stroke="rgba(0,0,0,0.14)"/>
+                </g>
+              </svg>
+            </a>
+
             <div id="moonChartWrapper" style="display: block;">
                 <a href="https://eme.radio/moon-ephemeris" class="annual-button" target="_blank">Annual</a>
                 <div id="moonChartLabel"></div>
@@ -1415,7 +1443,7 @@
                                                             iconSize: [40, 40],
                                                             iconAnchor: [10, 10]
                                                         }),
-                                                        title: `Moon Sublunar (${lat.toFixed(2)}°, ${lon.toFixed(2)}°)`
+                                                        title: `Sublunar Point (${lat.toFixed(2)}°, ${lon.toFixed(2)}°)`
                                                     }).addTo(map);
 
                                                     // Add moon footprint using L.greatCircle
