--- a/eme-observer/eoml.html
+++ b/eme-observer/eoml.html
@@ -127,46 +127,21 @@
                                                                         box-shadow: 0 2px 6px rgba(0, 0, 0, 0.15);
                                                                     }
                                                                         
-                                                                        /* 3D Dome Button */
+                                                                        /* Dome button – same style as Annual button */
                                                                         .dome-button {
-                                                                            right: 80px !important;  /* positions it left of the Annual button */
-                                                                            background: radial-gradient(circle at 50% 30%,
-                                                                                                        #ffffff 0%,
-                                                                                                        #cfe6ff 35%,
-                                                                                                        #7bb4f3 70%,
-                                                                                                        #005fa3 100%);
-                                                                            border-radius: 20px;      /* pill shape for text */
-                                                                            padding: 4px 10px;
+                                                                            right: 60px;              /* moves it left of Annual */
+                                                                            padding: 3px 6px;         /* matches Annual height */
                                                                             min-height: 24px;
                                                                             display: inline-flex;
                                                                             align-items: center;
                                                                             justify-content: center;
-                                                                            font-size: 12px;
-                                                                            font-weight: 600;
-                                                                            color: #003d73;
-                                                                            text-decoration: none;
-                                                                            border: 1px solid rgba(255,255,255,0.4);
-                                                                            box-shadow:
-                                                                                inset 0 2px 4px rgba(255,255,255,0.8),
-                                                                                inset 0 -2px 4px rgba(0,0,0,0.2),
-                                                                                0 1px 3px rgba(0,0,0,0.2);
-                                                                            cursor: pointer;
                                                                             position: absolute;
                                                                             top: 145px;
                                                                             z-index: 10;
                                                                         }
 
-                                                                        .dome-button:hover {
-                                                                            background: radial-gradient(circle at 50% 25%,
-                                                                                                        #ffffff 0%,
-                                                                                                        #e7f2ff 35%,
-                                                                                                        #9ac9ff 70%,
-                                                                                                        #006fc0 100%);
-                                                                            transform: translateY(-1px);
-                                                                            box-shadow:
-                                                                                inset 0 2px 5px rgba(255,255,255,0.85),
-                                                                                inset 0 -3px 5px rgba(0,0,0,0.25),
-                                                                                0 2px 6px rgba(0,0,0,0.25);
+                                                                        .dome-button svg {
+                                                                            display: block;
                                                                         }
 
 
@@ -1053,11 +1028,32 @@
             <div id="moonChartWrapper" style="display: block;">
                 <a href="https://dxer.site/eme-noise-mapper/"
                    class="annual-button dome-button"
-                   target="_blank">
-                    EME Noise Mapper
+                   target="_blank"
+                   title="EME Noise Mapper">
+                    
+                    <!-- dome icon -->
+                    <svg xmlns="http://www.w3.org/2000/svg"
+                         width="18" height="18"
+                         viewBox="0 0 24 24"
+                         fill="none"
+                         aria-hidden="true">
+                      <path d="M2 15a10 10 0 0 1 20 0v3H2v-3z" fill="white"/>
+                      <g stroke="rgba(0,0,0,0.25)" stroke-width="0.9" fill="none" stroke-linecap="round">
+                        <path d="M3.5 15c2.2-3.2 6.4-4.8 9.5-4.8s7.3 1.6 9.5 4.8"/>
+                        <path d="M4.7 17c2-1.7 5.1-2.6 7.8-2.6s5.8.9 7.8 2.6"/>
+                        <path d="M12 8.5c2.2.0 4.0 1.8 4 1.8s-1.8 1.8-4 1.8-4-1.8-4-1.8 1.8-1.8 4-1.8z"
+                              stroke="rgba(0,0,0,0.14)"/>
+                      </g>
+                    </svg>
+
                 </a>
 
-                <a href="https://eme.radio/moon-ephemeris" class="annual-button" target="_blank">Annual</a>
+                <a href="https://eme.radio/moon-ephemeris"
+                   class="annual-button"
+                   target="_blank">
+                   Annual
+                </a>
+
                 <div id="moonChartLabel"></div>
                 <canvas id="moonDistanceChart"></canvas>
             </div>
