--- a/eme-observer/eoml.html
+++ b/eme-observer/eoml.html
@@ -128,6 +128,7 @@
                                                                     }
                                                                         
                                                                         .dome-button {
+                                                                            display: none !important;
                                                                             right: 60px;
                                                                             position: absolute;
                                                                             top: 145px;
