--- a/eme-observer/table.html
+++ b/eme-observer/table.html
@@ -422,6 +422,7 @@
         <div class="controls">
             <div class="filter-group">
                 <select id="bandSelect" class="band-select">
+                    <option value="222MHz">222MHz</option>
                     <option value="432MHz">432MHz</option>
                     <option value="1296MHz">1296MHz</option>
                     <option value="2320MHz">2320MHz</option>
@@ -471,6 +472,7 @@
         let table = null;
 
         const bandConfig = {
+            '222MHz': { label: '222MHz', jsonFile: 'stn_222MHz.json' },
             '432MHz': { label: '432MHz', jsonFile: 'stn_432MHz.json' },
             '1296MHz': { label: '1296MHz', jsonFile: 'stn_1296MHz.json' },
             '2320MHz': { label: '2320MHz', jsonFile: 'stn_2320MHz.json' },
