--- a/eme-observer/datasubmission.html
+++ b/eme-observer/datasubmission.html
@@ -284,11 +284,48 @@
 
     <div class="container">
         <h1>Data Submission</h1>
-        <p>To add a new EME station to EME Observer or update an existing station entry, submit the station details to EME Directory maintained by Jan PA0PLY: <a href="https://www.pa0ply.nl/eme-directory/" target="_blank">https://www.pa0ply.nl/eme-directory/</a>.</p>
-        <p>To include a station picture in the EME Observer station profiles, send the image to Max SA5IKN using the email address listed on his <a href="https://www.qrz.com/db/SA5IKN" target="_blank">QRZ.com profile</a>. Please specify what band the picture is for. Each band can use its dedicated picture or one picture can be used for all bands. An example of an EME Observer station profile with a picture is below.</p>
-        <img src="images/station-profile.jpg" alt="EME Observer Station Profile Example" class="screenshot">
-        <p class="screenshot-caption">Example of an EME Observer station profile with a picture.</p>
+
+        <p>
+            To add a new EME station to EME Observer or to update an existing station entry,
+            please submit the station details according to the operating band as outlined below.
+        </p>
+
+        <h2>432&nbsp;MHz and Above</h2>
+        <p>
+            For stations operating on <strong>432&nbsp;MHz and higher bands</strong>, submit station
+            details to the EME Directory maintained by Jan <strong>PA0PLY</strong>:
+            <br>
+            <a href="https://www.pa0ply.nl/eme-directory/" target="_blank">
+                https://www.pa0ply.nl/eme-directory/
+            </a>
+        </p>
+
+        <h2>222&nbsp;MHz</h2>
+        <p>
+            For stations operating on <strong>222&nbsp;MHz</strong>, please send station updates
+            to Martin <strong>PJ4MM</strong>.
+            His contact information is available on his
+            <a href="https://www.qrz.com/db/PJ4MM" target="_blank">QRZ.com profile</a>.
+        </p>
+
+        <h2>Station Pictures</h2>
+        <p>
+            To include a station picture in the EME Observer station profiles, send the image
+            to Max <strong>SA5IKN</strong> using the email address listed on his
+            <a href="https://www.qrz.com/db/SA5IKN" target="_blank">QRZ.com profile</a>.
+            Please specify which band the picture applies to. Each band may use its own picture,
+            or a single picture may be used for all bands.
+        </p>
+
+        <img src="images/station-profile.jpg"
+             alt="EME Observer Station Profile Example"
+             class="screenshot">
+
+        <p class="screenshot-caption">
+            Example of an EME Observer station profile with a picture.
+        </p>
     </div>
+
 
     <!-- Ko-Fi -->
     <script src='https://storage.ko-fi.com/cdn/scripts/overlay-widget.js'></script>
