--- a/eme-observer/user-guide.html
+++ b/eme-observer/user-guide.html
@@ -429,9 +429,9 @@
       
       <h3 id="station-data">Station Data</h3>
       <p>
-        Station data is contributed by the community. EME Observer's database builds upon the excellent and dedicated work of Jan PA0PLY, who maintains a comprehensive list of active EME stations.
+        Station data is contributed by the community. EME Observer's 432MHz and Above database builds upon the excellent and dedicated work of Jan PA0PLY, who maintains a comprehensive list of active EME stations. The database for 222MHz is maintained by Martin PJ4MM.
         <br><br>
-        To add or update a station, please submit your information through the <a href="https://www.pa0ply.nl/eme-directory/" target="_blank" rel="noopener">PA0PLY EME Directory</a>. Only include stations that have transmit (TX) capability and have completed at least one EME QSO on the band for which you are submitting data.
+        To add or update a station operating at 432MHz and Above, please submit your information through the <a href="https://www.pa0ply.nl/eme-directory/" target="_blank" rel="noopener">PA0PLY EME Directory</a>. To add a station operating at 222MHz send the data to <a href="https://www.qrz.com/db/PJ4MM" target="_blank" rel="noopener">Martin PJ4MM</a>. Only include stations that have transmit (TX) capability and have completed at least one EME QSO on the band for which you are submitting data.
         <br><br>
         To include a station image in the EME Observer station profiles, please send the image to Max SA5IKN, using the email address listed on <a href="https://www.qrz.com/db/SA5IKN" target="_blank" rel="noopener">his QRZ.com profile</a>. Please specify which band the picture is intended for. Each band can use a dedicated image, or the same image can be applied across all bands.
       </p>
