--- a/eme-observer/user-guide.html
+++ b/eme-observer/user-guide.html
@@ -1104,6 +1104,7 @@
           <li>ON5TA</li>
           <li>F5JWF</li>
           <li>F6IJI</li>
+          <li>DC1RDB</li>
         </ul>
 
         <p>Every contribution, big or small, helps keep EME Observer online and available for the community. Thank you for your support!</p>
