--- a/eme-observer/user-guide.html
+++ b/eme-observer/user-guide.html
@@ -366,7 +366,7 @@
       <h2>About EME Observer</h2>
       <p>
         <strong>EME Observer</strong> is a web application that provides an interactive map of Earth-Moon-Earth (EME) stations and enables one-click sked planning and real-time tracking of moon footprint and conditions. It delivers high-resolution lunar ephemeris data and displays key signal-path characteristics, including additional path loss, libration rate, Doppler spread, and polarization offset, together with station profiles and statistical summaries.
-        EME Observer currently supports all EME bands from 432&nbsp;MHz to 76GHz. Planning is also available for 144&nbsp;MHz and 50&nbsp;MHz, but station profiles are not currently included for these bands.
+        EME Observer currently supports all EME bands from 432&nbsp;MHz to 76GHz. Support for the 222 MHz band, which is primarily allocated to radio amateurs in ITU Region 2, has recently been added. Planning is also available for 144&nbsp;MHz and 50&nbsp;MHz, but station profiles are not currently included for these bands.
       </p>
 
       <figure style="margin-top: 10px; text-align: center;">
