--- a/eme-observer/user-guide.html
+++ b/eme-observer/user-guide.html
@@ -1031,7 +1031,7 @@
       <h2 id="dpol">A Note on Spatial Polarisation Offset (Dpol)</h2>
 
       <p>
-        Spatial polarisation offset is especially important to consider on the higher EME bands, 10GHz and above. On these bands, antennas are typically linearly polarised, and Faraday rotation is negligible, so any observed polarisation mismatch is primarily due to spatial effects. On the lower EME bands (144-432 MHz), linear polarisation is also commonly used, but Faraday rotation is significant. In this case, spatial polarisation offset interacts with Faraday rotation, and the two effects may add or partially cancel. Knowing the Dpol value helps identify conditions where path non-reciprocity may occur and can explain unexpected signal variations. On bands where circular polarisation is used (1296MHz-5760MHz), the effects of both spatial polarisation offset and Faraday rotation are effectively eliminated
+        Spatial polarisation offset is especially important to consider on the higher EME bands, 10GHz and above. On these bands, antennas are typically linearly polarised, and Faraday rotation is negligible, so any observed polarisation mismatch is primarily due to spatial effects. On the lower EME bands (144-432 MHz), linear polarisation is also commonly used, but Faraday rotation is significant. In this case, spatial polarisation offset interacts with Faraday rotation, and the two effects may add or partially cancel. Knowing the Dpol value helps identify conditions where path non-reciprocity may occur and can explain unexpected signal variations. On bands where circular polarisation is used (1296MHz-5760MHz), the effects of both spatial polarisation offset and Faraday rotation are effectively eliminated.
       </p>
       
       <p>
