--- a/header.html
+++ b/header.html
@@ -56,7 +56,7 @@
       </div>
     </div>
     <a href="links.html">Links</a>
-    <a href="contact.html" class="text-blue-600">Contact & QSL</a>
+    <a href="contact.html">Contact & QSL</a>
   </nav>
 </div>
 
@@ -85,6 +85,6 @@
       </ul>
     </li>
     <li><a href="links.html">Links</a></li>
-    <li><a href="contact.html" class="text-blue-600">Contact & QSL</a></li>
+    <li><a href="contact.html">Contact & QSL</a></li>
   </ul>
 </nav>
