--- a/awards.html
+++ b/awards.html
@@ -32,118 +32,9 @@
       </style>
     </head>
     <body class="bg-gray-50 text-gray-800">
-        
         <header class="bg-white shadow relative">
-          <!-- Your existing header content remains unchanged -->
-          <div class="container mx-auto p-4 flex flex-col md:flex-row md:items-center md:justify-between relative">
-            <!-- Profile Info -->
-            <div class="flex items-start space-x-4">
-                <img src="https://dxer.site/img/profile.jpg" alt="Profile" class="profile-image w-20 h-20 rounded-lg flex-shrink-0" />
-              <div class="flex flex-col">
-                <h1 class="text-lg md:text-xl font-bold leading-tight">SA5IKN – Amateur Radio Station</h1>
-                <p class="text-sm text-gray-600">a.k.a MØSKN, US6IKN, EI6KC</p>
-                <div class="flex flex-wrap gap-1 mt-1">
-                  <span class="text-xs font-semibold bg-blue-100 text-blue-800 px-2 py-0.5 rounded">EME</span>
-                  <span class="text-xs font-semibold bg-green-100 text-green-800 px-2 py-0.5 rounded">SAT</span>
-                  <span class="text-xs font-semibold bg-yellow-100 text-yellow-800 px-2 py-0.5 rounded">HF</span>
-                  <span class="text-xs font-semibold bg-purple-100 text-purple-800 px-2 py-0.5 rounded">VHF</span>
-                  <span class="text-xs font-semibold bg-pink-100 text-pink-800 px-2 py-0.5 rounded">UHF</span>
-                  <span class="text-xs font-semibold bg-gray-200 text-gray-800 px-2 py-0.5 rounded">SHF</span>
-                </div>
-                <div class="flex items-center space-x-4 mt-2">
-                  <a href="https://x.com/M0SKN_SA5IKN" target="_blank" rel="noopener noreferrer" class="inline-flex items-center text-sm text-blue-600 hover:underline">
-                    <svg class="w-4 h-4 mr-1" viewBox="0 0 24 24" fill="currentColor" aria-hidden="true">
-                      <path d="M20.87 4.13c-.7.31-1.46.52-2.26.61a4.03 4.03 0 0 0 1.78-2.22 8.1 8.1 0 0 1-2.56.98 4.02 4.02 0 0 0-6.84 3.66A11.43 11.43 0 0 1 3.15 3.1a4 4 0 0 0 1.24 5.37 3.99 3.99 0 0 1-1.83-.5v.05a4.03 4.03 0 0 0 3.23 3.94 4.02 4.02 0 0 1-1.82.07 4.03 4.03 0 0 0 3.76 2.8A8.09 8.09 0 0 1 2 18.57 11.4 11.4 0 0 0 8.29 20.5c7.55 0 11.68-6.26 11.68-11.68 0-.18-.01-.36-.02-.53a8.35 8.35 0 0 0 2.05-2.13l-.01-.03z"/>
-                    </svg>
-                    Follow on X
-                  </a>
-                  <a href="https://www.facebook.com/DXerMax/" target="_blank" rel="noopener noreferrer" class="inline-flex items-center text-sm text-blue-600 hover:underline">
-                    <svg class="w-4 h-4 mr-1" viewBox="0 0 24 24" fill="currentColor" aria-hidden="true">
-                      <path d="M22 12c0-5.522-4.477-10-10-10S2 6.478 2 12c0 4.991 3.657 9.128 8.438 9.878v-6.988h-2.54v-2.89h2.54V9.797c0-2.506 1.492-3.89 3.777-3.89 1.094 0 2.238.195 2.238.195v2.46h-1.26c-1.243 0-1.63.771-1.63 1.562v1.875h2.773l-.443 2.89h-2.33v6.988C18.343 21.128 22 16.991 22 12z"/>
-                    </svg>
-                    Follow on Facebook
-                  </a>
-                </div>
-              </div>
-            </div>
-            <!-- Mobile Menu Button -->
-            <div class="absolute top-4 right-4 md:hidden">
-              <button id="menu-toggle" class="text-gray-700 text-2xl focus:outline-none">
-                ☰
-              </button>
-            </div>
-            <!-- Desktop Navigation -->
-            <nav class="hidden md:flex md:ml-auto space-x-4 text-sm font-semibold mt-4 md:mt-0">
-              <a href="index.html">Home</a>
-              <a href="about.html">About</a>
-              <a href="awards.html" class="text-blue-600">Awards</a>
-              <a href="https://dxer.site/eme-observer/">EME Planner - EME Stations Map</a>
-              <a href="https://dxer.site/greencube-observer.html">Satellite Maps</a>
-              <div class="relative group">
-                <div class="text-sm font-semibold focus:outline-none cursor-pointer">Tools ▾</div>
-                <div class="absolute left-0 mt-2 w-56 bg-white shadow-lg rounded opacity-0 invisible group-hover:opacity-100 group-hover:visible transition-all duration-200 z-50" onmouseenter="this.classList.add('opacity-100','visible')" onmouseleave="this.classList.remove('opacity-100','visible')">
-                  <a href="https://dxer.site/eme-observer/" class="block px-4 py-2 hover:bg-gray-100">EME Observer - EME Planner & Map</a>
-                  <a href="https://eme.radio/moon-ephemeris" class="block px-4 py-2 hover:bg-gray-100">Annual Moon Ephemeris</a>
-                  <a href="https://dxer.site/sa5ikn-qrb-calculator/" class="block px-4 py-2 hover:bg-gray-100">QRB-QTF Calculator - Azimuth Finder</a>
-                  <a href="https://dxer.site/greencube-observer.html" class="block px-4 py-2 hover:bg-gray-100">GreenCube Observer</a>
-                  <a href="https://dxer.site/leo-satellite-observer.html" class="block px-4 py-2 hover:bg-gray-100">LEO Satellite Observer</a>
-                  <a href="https://dxer.site/qo-100-satellite-observer.html" class="block px-4 py-2 hover:bg-gray-100">QO-100 Satellite Observer</a>
-                </div>
-              </div>
-              <a href="links.html">Links</a>
-              <a href="contact.html">Contact & QSL</a>
-            </nav>
-          </div>
-          <!-- Mobile Navigation -->
-          <nav id="mobile-menu" class="md:hidden hidden bg-white border-t border-gray-200">
-            <ul class="flex flex-col space-y-2 p-4 text-sm font-semibold">
-              <li><a href="index.html">Home</a></li>
-              <li><a href="about.html">About</a></li>
-              <li><a href="https://dxer.site/awards.html" class="text-blue-600">Awards</a></li>
-              <li><a href="https://dxer.site/eme-observer/">EME Planner - EME Stations Map</a></li>
-              <li><a href="https://dxer.site/greencube-observer.html">Satellite Maps</a></li>
-              <li class="relative">
-                <button onclick="toggleMobileSubmenu()" class="w-full text-left text-gray-800 font-semibold flex items-center justify-between">
-                  Tools
-                  <svg id="submenu-arrow" class="w-4 h-4 ml-2 transition-transform transform" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor">
-                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M19 9l-7 7-7-7" />
-                  </svg>
-                </button>
-                <ul id="mobile-tools-submenu" class="ml-4 mt-1 space-y-1 hidden">
-                  <li><a href="https://dxer.site/eme-observer/" class="text-blue-600">EME Observer - EME Planner & Map</a></li>
-                  <li><a href="https://eme.radio/moon-ephemeris" class="text-blue-600">Annual Moon Ephemeris</a></li>
-                  <li><a href="https://dxer.site/sa5ikn-qrb-calculator/" class="text-blue-600">QRB-QTF Calculator - Azimuth Finder</a></li>
-                  <li><a href="https://dxer.site/greencube-observer.html" class="text-blue-600">GreenCube Observer</a></li>
-                  <li><a href="https://dxer.site/leo-satellite-observer.html" class="text-blue-600">LEO Satellite Observer</a></li>
-                  <li><a href="https://dxer.site/qo-100-satellite-observer.html" class="text-blue-600">QO-100 Satellite Observer</a></li>
-                </ul>
-              </li>
-              <li><a href="https://dxer.site/links.html">Links</a></li>
-              <li><a href="contact.html">Contact & QSL</a></li>
-            </ul>
-          </nav>
-          <script>
-              document.addEventListener('DOMContentLoaded', function() {
-                        const profileImage = document.querySelector('.profile-image');
-                        if (profileImage) {
-                          profileImage.addEventListener('contextmenu', function(e) {
-                            e.preventDefault();
-                          });
-                        }
-                      });
-            document.getElementById("menu-toggle").addEventListener("click", function () {
-              const menu = document.getElementById("mobile-menu");
-              menu.classList.toggle("hidden");
-            });
-            function toggleMobileSubmenu() {
-              const submenu = document.getElementById("mobile-tools-submenu");
-              const arrow = document.getElementById("submenu-arrow");
-              submenu.classList.toggle("hidden");
-              arrow.classList.toggle("rotate-180");
-            }
-          </script>
+          <div id="shared-header"></div>
         </header>
-        <body class="bg-gray-50 text-gray-800">
           <main class="max-w-3xl mx-auto p-4">
             <h1 class="text-2xl font-bold mb-6">Awards</h1>
             <div itemprop="articleBody">
@@ -206,8 +97,74 @@
           </main>
 
           <footer class="bg-gray-100 text-center p-4 mt-10 text-sm text-gray-600">
-            © All rights reserved. SA5IKN M0SKN US6IKN EI6KC, 2025
+            © All rights reserved. SA5IKN M0SKN US6IKN EI6KC, <span id="copyright-year"></span>
           </footer>
+
+        <script>
+          // Load the shared header with cache-busting (change the number when you update the menu)
+          fetch('header.html?v=1')  // ← bump this number (1 → 2 → 3 etc.) every time you change the menu
+            .then(response => {
+              if (!response.ok) throw new Error('Header not found');
+              return response.text();
+            })
+            .then(data => {
+              document.getElementById('shared-header').innerHTML = data;
+
+              // Re-attach mobile menu toggle
+              const menuToggle = document.getElementById('menu-toggle');
+              const mobileMenu = document.getElementById('mobile-menu');
+              if (menuToggle && mobileMenu) {
+                menuToggle.addEventListener('click', () => {
+                  mobileMenu.classList.toggle('hidden');
+                });
+              }
+
+              // Re-attach mobile Tools submenu toggle
+              const mobileToolsBtn = document.getElementById('mobile-tools-btn');
+              const mobileSubmenu = document.getElementById('mobile-tools-submenu');
+              const arrow = document.getElementById('submenu-arrow');
+              if (mobileToolsBtn && mobileSubmenu && arrow) {
+                mobileToolsBtn.addEventListener('click', () => {
+                  mobileSubmenu.classList.toggle('hidden');
+                  arrow.classList.toggle('rotate-180');
+                });
+              }
+
+              // Prevent right-click on profile image
+              const profileImage = document.querySelector('.profile-image');
+              if (profileImage) {
+                profileImage.addEventListener('contextmenu', e => e.preventDefault());
+              }
+
+              // === ACTIVE PAGE HIGHLIGHTING (place it here) ===
+              const currentPath = window.location.pathname.split('/').pop() || 'index.html';
+              if (currentPath === '') {
+                // Handle root URL (e.g., https://dxer.site/)
+                currentPath = 'index.html';
+              }
+
+              document.querySelectorAll('#shared-header a[href]').forEach(link => {
+                const href = link.getAttribute('href');
+                // Match exact filename or full URL if it's external (we only highlight internal pages)
+                if (href && (href === currentPath || href.endsWith('/' + currentPath))) {
+                  link.classList.add('text-blue-600', 'font-bold');
+                }
+              });
+            })
+            .catch(err => {
+              console.error('Failed to load header:', err);
+              document.getElementById('shared-header').innerHTML = '<p style="color:red;padding:1rem;">Menu failed to load.</p>';
+            });
+        </script>
+        <script>
+          // Automatically set the current year
+          document.addEventListener('DOMContentLoaded', () => {
+            const yearSpan = document.getElementById('copyright-year');
+            if (yearSpan) {
+              yearSpan.textContent = new Date().getFullYear();
+            }
+          });
+        </script>
         </body>
 
 </html>
